apps/qwen3-embedding/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qwen3-embedding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: qwen3-embedding
      app.kubernetes.io/name: qwen3-embedding
  serviceName: qwen3-embedding
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: qwen3-embedding
        app.kubernetes.io/name: qwen3-embedding
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/amd-gpu
                    operator: In
                    values:
                      - "true"
      containers:
        - name: qwen3-embedding
          image: llama-cpp
          args:
            - --host
            - "0.0.0.0"
            - --port
            - "8080"
            - --model
            - /models/Qwen3-Embedding-4B-Q8_0.gguf
            - --embeddings
            - --ctx-size
            - "40000"
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 120
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: 12Gi
            requests:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: models
              mountPath: /models
