apps/qwen3-embedding/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen3-embedding
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: qwen3-embedding
    app.kubernetes.io/name: qwen3-embedding
  ports:
    - name: http
      port: 8000
      targetPort: http
